objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Business Development</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>0 - Hold</fullName>
        </values>
        <values>
            <fullName>1 - Pre-Intro</fullName>
        </values>
        <values>
            <fullName>2 - Introduction</fullName>
        </values>
        <values>
            <fullName>3 - Qualifying</fullName>
        </values>
        <values>
            <fullName>4 - Business Approved</fullName>
        </values>
        <values>
            <fullName>5 - Legal%2FCompliance Approved</fullName>
        </values>
        <values>
            <fullName>6 - Launching</fullName>
        </values>
        <values>
            <fullName>7 - Live</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>HomeBuyer Canada</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closing</fullName>
        </values>
        <values>
            <fullName>Final Approval</fullName>
        </values>
        <values>
            <fullName>Funded Won</fullName>
        </values>
        <values>
            <fullName>Investment Due Diligence</fullName>
        </values>
        <values>
            <fullName>Post-Closing</fullName>
        </values>
        <values>
            <fullName>Ready for Ops</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>NewHomeBuyerFunnel</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closing</fullName>
        </values>
        <values>
            <fullName>Final Approval</fullName>
        </values>
        <values>
            <fullName>Funded Won</fullName>
        </values>
        <values>
            <fullName>Investment Due Diligence</fullName>
        </values>
        <values>
            <fullName>Post-Closing</fullName>
        </values>
        <values>
            <fullName>Ready for Ops</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>NewHomeOwnerFunnel</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closing</fullName>
        </values>
        <values>
            <fullName>Final Approval</fullName>
        </values>
        <values>
            <fullName>Funded Won</fullName>
        </values>
        <values>
            <fullName>Investment Due Diligence</fullName>
        </values>
        <values>
            <fullName>Offer</fullName>
        </values>
        <values>
            <fullName>On Hold</fullName>
        </values>
        <values>
            <fullName>Post-Closing</fullName>
        </values>
        <values>
            <fullName>Ready for Ops</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>AA_Letter_Decline_Reasons__c</fullName>
        <description>Customer facing decline reasons for Program Specialist to communicate to customer in Adverse Action email</description>
        <inlineHelpText>Reasons for decline in Adverse Action Letter</inlineHelpText>
        <label>AA Letter Decline Reasons</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ABA_Number__c</fullName>
        <description>Routing Number for Vantage Point</description>
        <inlineHelpText>Routing Number for Vantage Point</inlineHelpText>
        <label>ABA Number</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AVM_Adjustment_Flag__c</fullName>
        <formula>IF(AVM_Variance__c &gt; 0.1, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AVM Adjustment Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AVM_Difference__c</fullName>
        <description>The percentage difference of Appraisal and Appraisal Storm value - (the lower the better). Utilized by 3D Deal Score external service, do not delete or otherwise alter without express consent of the Research Team. Used to Apply Valuation Notes Tags.</description>
        <inlineHelpText>The percentage difference of Appraisal and Appraisal Storm value - (the lower the better).</inlineHelpText>
        <label>AVM Difference</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AVM_Score__c</fullName>
        <description>A percentile rank (between 0-100) indicating the AVM/Appraisal Storm at value difference at origination, relative to those of the current portfolio. Higher values are more favorable. The metric ranked is the percent difference between the Appraisal and the Appraisal Storm value. Utilized by 3D Deal Score external service, do not delete or otherwise alter without express consent of the Research Team.</description>
        <inlineHelpText>A percentile rank (0-100) indicating the AVM/AS at value difference at origination, relative to those of the current portfolio.Higher value favourable. The metric ranked is the percent difference between the Appraisal and the Appraisal Storm value.</inlineHelpText>
        <label>AVM/AS Score</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AVM_Variance__c</fullName>
        <description>Difference between Average AVM and Final OAV</description>
        <formula>IF(
    AND(
        NOT(ISBLANK(Property__c)),
        NOT(ISBLANK(Property__r.Average_AVM__c)), Property__r.Average_AVM__c &gt; 0),
    ABS((Final_OAV_Calculation__c - Property__r.Average_AVM__c) / Property__r.Average_AVM__c)
, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Difference between Average AVM and Final OAV</inlineHelpText>
        <label>AVM Variance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Account_Created_DateTime__c</fullName>
        <description>Time of parent account create. Corresponds with initial application received and reviewed (conversion).</description>
        <formula>Account.CreatedDate</formula>
        <inlineHelpText>Time of parent account create. Corresponds with initial application received and reviewed (conversion).</inlineHelpText>
        <label>Account Created DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Account_Executive__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used by BizDev</description>
        <inlineHelpText>Used by BizDev</inlineHelpText>
        <label>Account Executive</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Account Executive)</relationshipLabel>
        <relationshipName>Opportunities7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Acquistion_Age__c</fullName>
        <description>Age of opportunity. Today - Created Date.</description>
        <formula>NOW() -  CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Age of Opportunity. Today minus the date the opportunity was created.</inlineHelpText>
        <label>Acquistion Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Additional_Applicant_Income__c</fullName>
        <label>Additional Income From Other Applicants</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Adults_Occupying_Property_Dropdown__c</fullName>
        <label>Adults Occupying Property Dropdown</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Adults_occupying_property_not_on_title__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Adults occupying property not on title?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Age_from_Lead_Create_Date__c</fullName>
        <formula>if( IsClosed = False, TODAY()- DATEVALUE( Lead_Created_Date_Time__c ),
if( TEXT(StageName)="Closed Lost",  DATEVALUE( Closed_Lost_Date_Time__c ) - DATEVALUE( Lead_Created_Date_Time__c ),
if( TEXT(StageName)="Funded Won", Wire_to_Agent_Date__c - DATEVALUE( Lead_Created_Date_Time__c ), NULL)))</formula>
        <label>Age from Lead Create Date</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Age_of_Last_Stage_Change__c</fullName>
        <formula>If(ISBLANK(Date_of_Stage_Change__c),Today()- Datevalue(CreatedDate) , Today()- Datevalue(Date_of_Stage_Change__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age of Last Stage Change</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Age_of_Won__c</fullName>
        <formula>Wire_to_Agent_Date__c -  Datevalue(CreatedDate )+1</formula>
        <label>Age of Won</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Agency_or_Non_Agency__c</fullName>
        <description>Describes if (HomeBuyer) mortgage is an Agency or Non-Agency Mortgage. Agency is when the mortgage can be sold to Fannie or Freddie.</description>
        <inlineHelpText>Describes if (HomeBuyer) mortgage is an Agency or Non-Agency Mortgage. Agency is when the mortgage can be sold to Fannie or Freddie.</inlineHelpText>
        <label>Agency or Non-Agency?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agency</fullName>
                </value>
                <value>
                    <fullName>Non-Agency</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Agreement_Requirements_Date_Time__c</fullName>
        <description>Used in PKR</description>
        <inlineHelpText>Used in PKR</inlineHelpText>
        <label>Agreement Requirements Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Agreement_Requirements__c</fullName>
        <description>Used in PKR</description>
        <inlineHelpText>Used in PKR</inlineHelpText>
        <label>Agreement Requirements</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Comfortable with topic</fullName>
                </value>
                <value>
                    <fullName>Requested additional information</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Any_bankruptcies_or_foreclosures__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Any bankruptcies or foreclosures?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Applicant2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Applicant2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Applicant2)</relationshipLabel>
        <relationshipName>Opportunities_Applicant2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Applicant3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Applicant3</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Applicant3)</relationshipLabel>
        <relationshipName>Opportunities_Applicant3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Applicant_1_DOB__c</fullName>
        <description>Used in Wire Report v.3. Treasury needs DOB added to report. Report for Ish.</description>
        <formula>Applicant__r.Applicant_Birth_Date_Free_Response__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Applicant 1 DOB</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant_1_Email__c</fullName>
        <description>Used in COVID19 Email Template</description>
        <label>Applicant 1 Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Applicant_Bankruptcy_Dropdown__c</fullName>
        <label>Applicant Bankruptcy Dropdown</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Applicant_Deed_of_Foreclosure_Dropdown__c</fullName>
        <label>Applicant Deed of Foreclosure Dropdown</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Applicant_Documents_Names__c</fullName>
        <label>Applicant Documents Names</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant_Email__c</fullName>
        <formula>Applicant__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Contact's Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Applicant_Felony_Dropdown__c</fullName>
        <label>Applicant Felony Dropdown</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Applicant_Foreclosure_Dropdown__c</fullName>
        <label>Applicant Foreclosure Dropdown</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Applicant_Phone__c</fullName>
        <description>This field is for customer phone number and also supports click to call from talk-desk</description>
        <label>Applicant Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Applicant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Applicant</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Applicant Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Applicant_requires_2_5_Transaction_Fee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Applicant requires 2.5% Transaction Fee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Application_DateTime__c</fullName>
        <inlineHelpText>Time stamp of when DocuSign application was completed</inlineHelpText>
        <label>Application Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Application_Tracking_ID__c</fullName>
        <description>Unique identifier associated with Opportunity (FRX)</description>
        <inlineHelpText>Unique identifier associated with Opportunity (FRX)</inlineHelpText>
        <label>Previous Application Tracking ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Appraisal_Ordered_Date_Time__c</fullName>
        <label>Appraisal Ordered Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Appraisal_Ordered__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Appraisal has been ordered by Origination Ops</description>
        <label>Appraisal Ordered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Appraisal_Received_Date_Time__c</fullName>
        <label>Appraisal Received Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Appraisal_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Appraisal has been received</description>
        <label>Appraisal Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Appraisal_Review_Status__c</fullName>
        <inlineHelpText>"In Progress" status indicates that the appraisal(s) is being reviewed.  "Complete" status indicates that all appraisals have been reviewed and signed off by IM.</inlineHelpText>
        <label>Appraisal Review Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Appraised_Home_Value__c</fullName>
        <description>Actual Appraised Value</description>
        <inlineHelpText>Actual Appraised Value</inlineHelpText>
        <label>Appraised Home Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approval_Escalation_Boundary__c</fullName>
        <description>Returns the tuples of acceptable LTV, DTI for Exception, and (if applicable) DTI for Approval. Direct output of Passbook as of v2.0: do not delete or otherwise alter without consent of Richard Fu or Research Team.</description>
        <inlineHelpText>Returns the tuples of acceptable LTV, DTI for Exception, and (if applicable) DTI for Approval.</inlineHelpText>
        <label>Approval Escalation Boundary</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Denied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Asset_Total__c</fullName>
        <formula>Applicant__r.Asset_Total__c + Applicant2__r.Asset_Total__c +  Applicant3__r.Asset_Total__c +
Co_Applicant__r.Asset_Total__c + Co_Applicant2__r.Asset_Total__c +  Co_Applicant3__r.Asset_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total assets across all related applicants and co-applicants</inlineHelpText>
        <label>Asset Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Assets_Bank_Acct__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Assets Bank Acct</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Assets_Brokerage_Acct__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Assets Brokerage Acct</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Assets_Liquid_Subtotal_f__c</fullName>
        <formula>Assets_Bank_Acct__c + Assets_Retirement_Acct__c + Assets_Brokerage_Acct__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total Assets for Bank + Brokerage + Retirement</inlineHelpText>
        <label>Total Liquid Assets</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Assets_Months_Reserves_f__c</fullName>
        <formula>BLANKVALUE(Assets_Liquid_Subtotal_f__c, 0) / BLANKVALUE(Post_Close_Monthly_Total_Housing__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Assets Liquid Subtotal / Post-Close Monthly Total Housing</inlineHelpText>
        <label>Months Reserves</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Assets_Other_Real_Estate__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Assets Other Real Estate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Assets_Other__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Assets Other</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Assets_Retirement_Acct__c</fullName>
        <label>Assets Retirement Acct</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Assignment_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used in Flow "PCS_Send_Follow_Up_to_Recorders_Office" for PCS team to follow up on missing recordables. This corresponds with the completion of Project Task, T10163. AM.</description>
        <label>Assignment Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attorney_Fee__c</fullName>
        <label>Attorney Fee</label>
        <summarizedField>OpportunityLineItem.Final_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>OpportunityLineItem.Type__c</field>
            <operation>equals</operation>
            <value>Attorney Fee</value>
        </summaryFilterItems>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Authorized_Disbursement_Date__c</fullName>
        <description>Date funds are authorized for disbursement. To be used in Q4 2019 Warehousing Project</description>
        <inlineHelpText>Date funds are authorized for disbursement.</inlineHelpText>
        <label>Authorized Disbursement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Backfill_MAD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Backfill_MAD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bank_Account_Number__c</fullName>
        <label>Bank Account Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billboard_Property_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Billboard Property Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Box_Folder_Id__c</fullName>
        <label>Box FolderID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Safe_Id__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Safe Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Channel__c</fullName>
        <label>Channel</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Direct to Consumer</fullName>
                </value>
                <value>
                    <fullName>Lender</fullName>
                </value>
                <value>
                    <fullName>Real Estate Agent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Close_Date_Description__c</fullName>
        <label>Close Date Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Close_of_Escrow_Date__c</fullName>
        <description>Date Escrow Closes. Requested for visibility from RM; initially mapped from lead.Close_of_Escrow_Date upon lead conversion</description>
        <inlineHelpText>Date Escrow Closes.</inlineHelpText>
        <label>Close of Escrow Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Closed_Date_or_Estimated_Close_Date__c</fullName>
        <description>Wire to Agent Date, Closed Lost Date, or  Close Date depending on Opportunity Stage.</description>
        <formula>IF(Not(Isblank( Wire_to_Agent_Date__c )) &amp;&amp; TEXT(StageName) &lt;&gt; "CLOSED LOST",Wire_to_Agent_Date__c,
IF(TEXT(StageName)="CLOSED LOST",  DATEVALUE(Closed_Lost_Date_Time__c), CloseDate))</formula>
        <inlineHelpText>This is the Wire to Agent Date if Stage is 'Post-Closing'. If Stage is Closed Lost, this will default to the Closed Lost Date.</inlineHelpText>
        <label>Closed Date or Estimated Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Closed_Lost_Date_Time__c</fullName>
        <label>Closed Lost Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Closing_Document_Created_Date_Time__c</fullName>
        <description>Field used in Nintex for Closing Documents. Timestamps NOW() when HO/HB Closing Documents are generated.</description>
        <inlineHelpText>Field used in Nintex for Closing Documents. Timestamps NOW() when HO/HB Closing Documents are generated.</inlineHelpText>
        <label>Closing Document Created Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Closing_Documents_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used for reporting to see when closing documents have been sent out. - AM</description>
        <label>Closing Documents Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Co_Applicant2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Co-Applicant2</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (CoApplicant2)</relationshipLabel>
        <relationshipName>Opportunities_CoApplicant2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Co_Applicant3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Co-Applicant3</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (CoApplicant3)</relationshipLabel>
        <relationshipName>Opportunities_CoApplicant3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Co_Applicant_Bankruptcy_Dropdown__c</fullName>
        <label>Co-Applicant Bankruptcy Dropdown</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Co_Applicant_Deed_of_Foreclosure_Dropdow__c</fullName>
        <label>Co-Applicant Deed of Foreclosure Dropdow</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Co_Applicant_Email__c</fullName>
        <formula>Co_Applicant__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Co-Applicant Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Co_Applicant_Felony_Dropdown__c</fullName>
        <label>Co-Applicant Felony Dropdown</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Co_Applicant_Foreclosure_Dropdown__c</fullName>
        <label>Co-Applicant Foreclosure Dropdown</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Co_Applicant_Phone__c</fullName>
        <description>This field is for customer phone number and also supports click to call from talk-desk</description>
        <label>Co Applicant Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Co_Applicant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Co-Applicant for opportunity. Updated via Apex</description>
        <label>Co-Applicant</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Co-Applicant Opportunities</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Co_applicant_is_not_null__c</fullName>
        <formula>IF(  !ISBLANK(Co_Applicant__c)  , 'and'  , NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Co applicant is not null</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ComputedMAD__c</fullName>
        <description>The Maximum Allowable Debt as calculated by the Computed MAD external service and pre-existing formula logic. ComputedMAD is populated by an external service created by the Research Team. Please consult them prior to making changes to this field.</description>
        <inlineHelpText>The Maximum Allowable Debt as calculated by the Computed MAD external service and pre-existing formula logic.</inlineHelpText>
        <label>ComputedMAD</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Concentration_Score__c</fullName>
        <description>A percentile rank (between 0-100) indicating the diversification benefit of this potential investment on an aggregated geographic level. A higher score correspond to higher diversification benefits. Currently aggregated as the average of the State, CBSA, and County Diversification Scores. Utilized by 3D Deal Score external service, do not delete or otherwise alter without express consent of the Research Team.</description>
        <inlineHelpText>A percentile rank (between 0-100) indicating the diversification benefit of this potential investment on an aggregated geographic level. A higher score correspond to higher diversification benefits. Currently aggregated as the average of the State, CBSA,</inlineHelpText>
        <label>Summary Diversification Score</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Condo_PUD_Name__c</fullName>
        <label>Condo/PUD Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contract_Signed_Date__c</fullName>
        <label>Contract Signed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Converted_Close_Date__c</fullName>
        <label>Converted Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Converted_Date_Time__c</fullName>
        <label>Converted Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Converted_Lead_RT__c</fullName>
        <description>Helper field to store the record type name from the converted Lead</description>
        <label>Converted Lead RT</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Core_Logic_Property_Id__c</fullName>
        <description>Keep for Backfill. Deprecate once this is done. Move to Property. 10/22</description>
        <inlineHelpText>Keep for Backfill. Deprecate once this is done. Move to Property. 10/22</inlineHelpText>
        <label>Core Logic Property Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Count_Success_Factors__c</fullName>
        <label>Count Success Factors</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>